<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <android.support.v4.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id='@+id/drawer_layout'
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="50dp"
                android:src="@drawable/img_politics"
                android:id="@+id/imageButton"
                android:layout_above="@+id/imageButton2"
                android:layout_toStartOf="@+id/imageButton3"
                android:onClick="button_politic"
                android:contentDescription="@string/politic"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="100dp"
                android:src="@drawable/img_computing"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/imageButton3"
                android:onClick="button_computing"
                android:contentDescription="@string/computings"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="150dp"
                android:src="@drawable/img_chinese"
                android:id="@+id/imageButton2"
                android:layout_below="@+id/imageButton3"
                android:layout_centerHorizontal="true"
                android:onClick="button_chineses"
                android:contentDescription="@string/chineses" />
        </RelativeLayout>


        <fragment
            android:id="@+id/fragment_navigation_drawer"
            android:name="cheongjun.ngin.definition.NavigationDrawerFragment"
            android:layout_width="@dimen/nav_drawer"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/fragment_navigation_drawer"
            tools:layout="@layout/fragment_navigation_drawer" />

    </android.support.v4.widget.DrawerLayout>


</LinearLayout>